--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -50,13 +50,21 @@
 
   &__organisation {
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
     margin-bottom: 50px;
     flex-wrap: wrap;
 
     &__card {
-      width: calc((100% / 3) - 15px);
+      width: calc((100% / 3) - 20px);
+      margin-right: 15px;
+      margin-left: 15px;
       margin-bottom: 30px;
+      &:nth-child(3n+1) {
+        margin-left: 0;
+      }
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
 
       .card-body {
         position: relative;
